# soporte_tecnico

./: .gitignore  langgraph.json  pyproject.toml  requirements.txt
soporte_tecnico/: config.py
soporte_tecnico/data/chroma_db/: chroma.sqlite3
soporte_tecnico/graph/: graph_builder.py  routers.py  state.py
soporte_tecnico/nodes/: chat_node.py  clarify_node.py  detect_intent.py  extract_slots.py  rag_node.py  support_node.py
soporte_tecnico/rag/: query_rag.py  setup_rag.py
tests/: test_graph.py  test_intent.py  test_query_rag.py  test_setup_rag.py  test_slots.py
