[project]
name = "soporte-tecnico"
version = "0.1.0"
description = ""
authors = [
    {name = "JeffersonG96",email = "jefersonguaman94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph (>=1.0.6,<2.0.0)",
    "langgraph-cli[inmem] (>=0.4.11,<0.5.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "soporte_tecnico", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
